fix spacing

--- a/resources/assets/sass/content/_docs.scss
+++ b/resources/assets/sass/content/_docs.scss
@@ -52,7 +52,7 @@
 	h2 {
 		font-size: 30px;
 		font-weight: 400;
-		margin-top: 65px;
+		margin-top: 55px;
 		position: relative;
 
 		a,
